# govfolio

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  skills-lock.json
crates/adapters/australia_register/: Cargo.toml
crates/adapters/australia_register/fixtures/: MANIFEST.json
crates/adapters/australia_register/fixtures/real_estate_textlayer/: expected.gold.json  expected.silver.json  extraction.cache.json
crates/adapters/australia_register/fixtures/scanned_alterations/: expected.gold.json  expected.silver.json  extraction.cache.json
crates/adapters/australia_register/src/: adapter.rs  details.rs  extractor.rs  lib.rs  normalize.rs
crates/adapters/australia_register/tests/: details_schema_snapshot.rs  extraction_cache_snapshot.rs  snapshots.rs
crates/adapters/br/: Cargo.toml  plan.md
crates/adapters/br/fixtures/: MANIFEST.json
crates/adapters/br/src/: adapter.rs  binding.rs  details.rs  lib.rs  normalize.rs  parse.rs  seed.rs  tables.rs
crates/adapters/br/tests/: details_schema_snapshot.rs
crates/adapters/eu_fr_de_annual/: Cargo.toml
crates/adapters/eu_fr_de_annual/fixtures/: MANIFEST.json
crates/adapters/eu_fr_de_annual/src/: de.rs  dom.rs  eu.rs  fr.rs  ids.rs  lib.rs  util.rs
crates/adapters/eu_fr_de_annual/tests/: details_schema_snapshot.rs  prime_eu_cache.rs
crates/adapters/fixture_fake/: Cargo.toml
crates/adapters/fixture_fake/fixtures-broken/: README.md
crates/adapters/fixture_fake/src/: lib.rs
crates/adapters/us_house/: Cargo.toml
crates/adapters/us_house/fixtures/: MANIFEST.json
crates/adapters/us_house/fixtures-llm/: MANIFEST.json
crates/adapters/us_house/src/: adapter.rs  binding.rs  details.rs  extractor.rs  index.rs  lib.rs  normalize.rs  parse.rs  seed.rs  tables.rs
crates/adapters/us_house/tests/: details_schema_snapshot.rs
crates/adapters/us_senate/: Cargo.toml
crates/adapters/us_senate/fixtures/: MANIFEST.json
crates/adapters/us_senate/src/: adapter.rs  details.rs  extractor.rs  lib.rs  normalize.rs  parse.rs  tables.rs
crates/adapters/us_senate/tests/: details_schema_snapshot.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  bronze.rs  dto.rs  error.rs  etag.rs  extract.rs  lib.rs  main.rs
crates/api/src/routes/: alert_rules.rs  filings.rs  jurisdictions.rs  keys.rs  mod.rs  ops.rs  politicians.rs  records.rs  regimes.rs  review.rs  search.rs  stripe.rs
crates/api/src/routes/admin/: infra.rs  (+9 more)
crates/api/tests/: contract.rs  filings.rs  openapi_snapshot.rs  ops.rs  tiers.rs
crates/core/: Cargo.toml  build.rs
crates/core/migrations/: 0000_init.sql  0001_core.sql  0002_silver_us_house.sql  0003_registry_columns.sql  0004_extraction_cache.sql  0005_alerts.sql  0006_review_audit.sql  0007_productization.sql  0008_sentinel_watch.sql  0009_sample_audit.sql  0010_silver_br.sql  0011_backfill_run.sql  0011_ops_indexes.sql  0012_ops_indexes.sql  0013_politician_external_identifier.sql  0014_integration_receipt.sql  0015_historical_contract_receipt.sql
crates/core/schemas/: gold_candidate.json  record_filter.json
crates/core/src/: alerts.rs  db.rs  ids.rs  integration.rs  lib.rs  query.rs  stripe.rs
crates/core/src/domain/: enums.rs  fingerprint.rs  gold.rs  mod.rs  value.rs
crates/core/src/schemas/: mod.rs
crates/core/src/seed/: iso.rs  mod.rs
crates/core/tests/: ddl.rs  integration_receipt.rs  migrate.rs  registry.rs  schema_snapshot.rs
crates/pipeline/: Cargo.toml
crates/pipeline/schemas/details/: australia_register.change_notification.json  australia_register.interest.json  br.holding.json  canada_ciec.change_notification.json  canada_ciec.interest.json  de_bundestag.interest.json  eu_parliament_dpi.interest.json  fixture_fake.transaction.json  fr_hatvp_dia.interest.json  uk_commons_register.interest.json  us_house.transaction.json  us_senate.transaction.json
crates/pipeline/src/: adapter.rs  conformance.rs  factory.rs  fingerprint_content.rs  lib.rs  promote.rs  redaction.rs  run.rs  zero_rows.rs
crates/pipeline/src/evals/: acceptance.rs  mod.rs  reference.rs  roles.rs
crates/pipeline/src/extraction/: anthropic.rs  cache.rs  consensus.rs  mod.rs
crates/pipeline/src/stages/: ingest.rs  mod.rs  pipeline_run.rs  publish.rs  roster.rs  seed.rs
crates/pipeline/tests/: backfill_suppression.rs  conformance.rs  e2e_local.rs  extraction.rs  promote.rs  publication_gates.rs  role_evals.rs  roster_historical.rs  roster_identity.rs  validate_authority.rs  zero_row_parse.rs
crates/supervisor/: Cargo.toml
crates/supervisor/migrations/: 0001_control_store.sql  0002_build_admission.sql  0003_historical_contract.sql
crates/supervisor/src/: artifacts.rs  build_classifier.rs  build_experiment.rs  build_interference.rs  build_policy.rs  build_protocol.rs  build_scheduler.rs  build_service.rs  build_shim.rs  build_store.rs  build_transport.rs  canary.rs  config.rs  failover.rs  historical_contract.rs  host.rs  integration.rs  lib.rs  main.rs  model.rs  policy.rs  preflight.rs  process.rs  store.rs  supervisor.rs
crates/supervisor/src/provider/: claude.rs  codex.rs  environment.rs  mod.rs  normalize.rs
crates/supervisor/tests/: build_classifier.rs  build_cli.rs  build_experiment.rs  build_interference.rs  build_ipc.rs  build_policy.rs  build_process.rs  build_protocol.rs  build_recovery.rs  build_scheduler.rs  build_service.rs  build_shim.rs  build_store.rs  historical_contract.rs  historical_integration.rs  provider_protocol.rs
crates/worker/: Cargo.toml
crates/worker/src/: backfill.rs  billing.rs  lease.rs  lib.rs  migrate_local_to_prod.rs  sampler.rs  sentinel.rs  snapshot.rs  stripe.rs
crates/worker/src/alerts/: email.rs  matcher.rs  mod.rs  payload.rs  retry.rs  sender.rs  webhook.rs
crates/worker/src/board/: git_journal.rs  goals.rs  logs.rs  mod.rs  procs.rs  registry.rs  tripwire.rs
crates/worker/tests/: alerts.rs  backfill.rs  backfill_budget_gate.rs  backfill_real.rs  billing.rs  lease.rs  migrate_local_to_prod.rs  sampler.rs  sentinel.rs  snapshot.rs
(+846 files in other folders)
