[package]
name = "api"
version = "0.1.0"
edition = "2024"
# Two bins live here (the server + the contract emitter); `cargo run -p api`
# means the server (plan M1 exit criteria).
default-run = "api"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
# const-composes SQL from the shared grammar fragment while staying a
# compile-time &'static str (sqlx SqlSafeStr holds structurally).
const_format = "0.2.35"
core = { version = "0.1.0", path = "../core", features = ["utoipa"] }
# Strict alert_rule.filter validation against the committed grammar schema.
jsonschema = { version = "0.46.9", default-features = false }
# The ONE write path behind /v1/review-tasks/{id}/resolve: promote owns all
# adjudication semantics (supersede-never-update); the API is a thin door.
pipeline = { path = "../pipeline" }
# API key minting (auth::generate_key): 32 CSPRNG bytes per key.
rand = "0.9.2"
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Strong ETags: sha256 of the response body (same hasher family as Bronze).
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal", "json"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
ulid = "1.2.1"
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono", "decimal"] }

[dev-dependencies]
http-body-util = "0.1.3"
# The contract test seeds Gold through the real Task 9 pipeline over the
# us_house fixtures — same legal dev-dep pattern as pipeline's e2e suite.
us_house = { path = "../adapters/us_house" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros"] }
tower = { version = "0.5.2", features = ["util"] }
