[package]
name = "core"
version = "0.1.0"
edition = "2024"

# Lib target must NOT be named `core`: an --extern named `core` shadows the sysroot
# core crate inside this package's tests/bins, breaking every proc macro that emits
# `::core::...` paths (#[tokio::main], #[sqlx::test], ...). Package name (and all
# `-p core` commands) unchanged.
[lib]
name = "govfolio_core"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
rust_decimal = "1.42.1"
schemars = { version = "1.2.1", features = ["chrono04", "rust_decimal1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
rust_decimal_macros = "1.40.0"
