[package]
name = "core"
version = "0.1.0"
edition = "2024"

# Lib target must NOT be named `core`: an --extern named `core` shadows the sysroot
# core crate inside this package's tests/bins, breaking every proc macro that emits
# `::core::...` paths (#[tokio::main], #[sqlx::test], ...). Package name (and all
# `-p core` commands) unchanged.
[lib]
name = "govfolio_core"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
rust_decimal = "1.42.1"
schemars = { version = "1.2.1", features = ["chrono04", "rust_decimal1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
# chrono + rust_decimal: the shared filter grammar (core::query) binds dates
# and money bounds directly.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros", "chrono", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
ulid = { version = "1.2.1", features = ["serde"] }
# Optional: OpenAPI schema derives on the wire types so crates/api reuses the
# ONE serialization contract (invariant 7) instead of redefining DTO enums.
utoipa = { version = "5.5.0", optional = true, features = ["chrono", "decimal"] }

[features]
utoipa = ["dep:utoipa"]

[dev-dependencies]
rust_decimal_macros = "1.40.0"
