[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
chrono = "0.4.45"
core = { version = "0.1.0", path = "../core" }
jsonschema = { version = "0.46.9", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
similar = "3.1.1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "sync"] }

[dev-dependencies]
fixture_fake = { path = "../adapters/fixture_fake" }
tokio = { version = "1.52.3", features = ["test-util", "macros", "time", "rt"] }
