[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
# LLM extraction (goal 021): PDF bytes travel as a base64 document block.
base64 = "0.22.1"
chrono = "0.4.45"
core = { version = "0.1.0", path = "../core" }
jsonschema = { version = "0.46.9", default-features = false }
# cookies + form: session-gated sources (us_senate eFD agreement dance,
# regime doc §2.1) hold their agreement flag against an opaque session cookie
# and are driven by form POSTs.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "cookies", "form"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
# float_roundtrip: expected.*.json fixtures pin exact f64 images of f32
# confidences (MANIFEST convention); default best-effort float parsing lands
# 1 ulp off and breaks the deep-compare. Exact parsing is contract here.
serde_json = { version = "1.0.150", features = ["float_roundtrip"] }
# Coverage-factory artifacts (sources.yaml, AUTHORITY.md front-matter) are YAML.
# serde_yaml is archived/deprecated; serde_norway is its maintained continuation.
serde_norway = "0.9.42"
sha2 = "0.11.0"
similar = "3.1.1"
rust_decimal = "1.42.1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal", "json"] }
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "sync"] }
ulid = "1.2.1"

# Coverage-factory phase gates (goal 015): hyphenated bin names per the
# `cargo run -p pipeline --bin validate-survey -- <jurisdiction>` convention.
[[bin]]
name = "validate-sources"
path = "src/bin/validate_sources.rs"

[[bin]]
name = "validate-survey"
path = "src/bin/validate_survey.rs"

[[bin]]
name = "validate-manifest"
path = "src/bin/validate_manifest.rs"

# Role-eval epoch gate (goal 016): per-role scores vs the frozen E1
# reference + entry verdict, for orchestrator use.
[[bin]]
name = "epoch-gate"
path = "src/bin/epoch_gate.rs"

[dev-dependencies]
fixture_fake = { path = "../adapters/fixture_fake" }
# Dev-dep cycle (pipeline -> us_house -> pipeline) is legal: the e2e runner
# test drives the real adapter end to end.
us_house = { path = "../adapters/us_house" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros"] }
tokio = { version = "1.52.3", features = ["test-util", "macros", "time", "rt"] }
tempfile = "3.27.0"
