[package]
name = "australia_register"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
core = { version = "0.1.0", path = "../../core" }
pipeline = { version = "0.1.0", path = "../../pipeline" }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
