[package]
name = "fixture_fake"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
chrono = "0.4.45"
core = { version = "0.1.0", path = "../../core" }
pipeline = { version = "0.1.0", path = "../../pipeline" }
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
rust_decimal_macros = "1.40.0"
