[package]
name = "us_house"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
core = { version = "0.1.0", path = "../../core" }
pdf-extract = "0.12.0"
pipeline = { version = "0.1.0", path = "../../pipeline" }
quick-xml = "0.41.0"
rust_decimal = "1.42.1"
schemars = { version = "1.2.1", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
ulid = "1.2.1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
rust_decimal_macros = "1.40.0"
