[package]
name = "us_senate"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
core = { version = "0.1.0", path = "../../core" }
pipeline = { version = "0.1.0", path = "../../pipeline" }
rust_decimal = "1.42.1"
schemars = "1.2.1"
# Regime doc §6: html5ever DOM + CSS selectors — the electronic PTR is
# server-rendered Django-template HTML with a fixed 9-column table.
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }

[dev-dependencies]
rust_decimal_macros = "1.40.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
